<resources>
    <string name="app_name">Финэпп</string>
    <string name="greeting">Добро пожаловать!</string>
    <string name="balance">Баланс</string>
    <string name="home_page">Главная</string>
    <string name="income">Доходы</string>
    <string name="expense">Расходы</string>
    <string name="goals">Цели</string>
    <string name="tips">Советы</string>
    <string name="statistics">Статистика</string>
    <string name="exit">Выход</string>
    <string name="active">Активные</string>
    <string name="achieved">Достигнутые</string>
    <string name="deleted">Архивные</string>
    <string name="title">Название</string>
    <string name="category">Категория</string>
    <string name="goal">Цель</string>
    <string name="cost">Сумма</string>
    <string name="comment">Комментарий</string>
    <string name="date">Дата</string>
    <string name="done">Готово</string>
    <string name="edit">Изменить</string>
    <string name="arсhive">В архив</string>
    <string name="delete">Удалить</string>
    <string name="addMoney">Изменить прогресс</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="logIn">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_fragment_categores">Категории</string>
    <string name="title_last_week">Последняя неделя</string>
    <string name="edit_expense_title_sum_of_expense">Сумма расхода</string>
    <string name="filter_category">Фильтровать по категории</string>
    <string name="filter_ascending_sum">Сначала дорогие</string>
    <string name="filter_descending_sum">Сначала дешевые</string>
    <string name="filter_descending_date">Сначала новые</string>
    <string name="menu_item_search">Поиск</string>
    <string name="statistics_title_diagramm_category_income">Диаграмма категорий доходов</string>
    <string name="statistics_title_diagramm_category_expense">Диаграмма категорий расходов</string>
    <string name="statistics_title_diagramm_category_goals">Диаграмма категорий целей</string>
    <string name="statistics_title_diagramm_progress_goals">Диаграмма процент достигнутых целей</string>
    <string name="cost_toast_text_empty_filter">Выберите категорию фильтрации или если хотите закрыть - нажмите крестик</string>
    <string name="cost_toast_text_empty_search">Введите текст в поисковую строку или если хотите закрыть - нажмите крестик</string>

    <string-array name="categoriesGoals">
        <item>Другое</item>
        <item>Жилье</item>
        <item>Транспорт</item>
        <item>Еда и напитки</item>
        <item>Развлечения</item>
        <item>Техника</item>
        <item>Образование</item>
        <item>Покупки</item>
    </string-array>

    <string-array name="categoriesIncome">
        <item>Другое</item>
        <item>Заработная плата</item>
        <item>Премия</item>
        <item>Инвестиции</item>
        <item>Подарок</item>
        <item>Гос. выплаты</item>
        <item>Кэшбэк</item>
        <item>Рента</item>
    </string-array>

    <string-array name="categoriesExpense">
        <item>Цель</item>
        <item>Другое</item>
        <item>Жилье</item>
        <item>Транспорт</item>
        <item>Еда и напитки</item>
        <item>Развлечения</item>
        <item>Техника</item>
        <item>Образование</item>
        <item>Покупки</item>
    </string-array>

    <string-array name="categoriesTimeForDiagram">
        <item>За последний год</item>
        <item>За последний месяц</item>
        <item>За последние две недели</item>
    </string-array>
</resources>