<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoExpenseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_contur_violet">

        <TextView
            android:id="@+id/tvMoneyExpenseInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="30"
            android:text="5 000 000 000"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.073"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvTitleInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="20"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:text="Квартира"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvMoneyExpenseInfo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.074"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvDateInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="20"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:text="@string/date"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvMoneyExpenseInfo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleInfo"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvDateExpenseInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="20"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:text="01.01.2000"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMoneyExpenseInfo"
            app:layout_constraintVertical_bias="0.006"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="30"
            android:text="@string/category"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateInfo"
            app:layout_constraintVertical_bias="0.03"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvExpenseCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxWidth="120dp"
            android:maxEms="30"
            android:maxLines="3"
            android:text="@string/category"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateExpenseInfo"
            app:layout_constraintVertical_bias="0.025"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvCategoryGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="30"
            android:text="@string/goal"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvExpenseCategoryGoal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvExpenseCategoryGoal"
            app:layout_constraintVertical_bias="0.033"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvExpenseCategoryGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxWidth="120dp"
            android:maxLength="25"
            android:maxLines="3"
            android:text="@string/category"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExpenseCategory"
            app:layout_constraintVertical_bias="0.025"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxEms="30"
            android:text="@string/comment"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryGoal"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvExpenseComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left|center_vertical"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxWidth="120dp"
            android:maxLines="3"
            android:text="@string/category"
            android:textColor="@color/color_of_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvComment"
            app:layout_constraintVertical_bias="0.011"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rectangle_violet"
            android:foregroundGravity="center"
            android:src="@drawable/shape_rectangle_violet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExpenseComment"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ibEdit"
            app:layout_constraintEnd_toEndOf="@+id/ibEdit"
            app:layout_constraintStart_toStartOf="@+id/ibEdit"
            app:layout_constraintTop_toTopOf="@+id/ibEdit" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_rectangle_violet"
            android:foregroundGravity="center"
            android:src="@drawable/shape_rectangle_violet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibEdit"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ibDelete"
            app:layout_constraintEnd_toEndOf="@+id/ibDelete"
            app:layout_constraintStart_toStartOf="@+id/ibDelete"
            app:layout_constraintTop_toTopOf="@+id/ibDelete" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:drawable/ic_delete"
            android:src="@android:drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.976"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>